--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -163,7 +163,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W01-3g-Z6O">
-                                        <rect key="frame" x="162.5" y="447" width="285" height="36"/>
+                                        <rect key="frame" x="163" y="447" width="285" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Don't have an account? Sign up">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -172,6 +172,9 @@
                                             <action selector="signUpAction:" destination="onv-41-avN" eventType="touchUpInside" id="bWW-Tv-Wlf"/>
                                         </connections>
                                     </button>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="K3O-XV-RHs" userLabel="activityIndicator">
+                                        <rect key="frame" x="285" y="491" width="20" height="20"/>
+                                    </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.99215686274509807" green="0.5607843137254902" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -184,8 +187,11 @@
                                     <constraint firstItem="a4p-6b-fJP" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" id="aDA-Lm-vqb"/>
                                     <constraint firstItem="IgX-aj-Pvs" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="5" id="bND-2C-9j1"/>
                                     <constraint firstItem="O2v-tJ-ZXT" firstAttribute="top" secondItem="ym3-UA-XLN" secondAttribute="bottom" constant="8" id="eqX-45-1Hg"/>
-                                    <constraint firstItem="W01-3g-Z6O" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="4.5" id="ibH-km-79x"/>
+                                    <constraint firstItem="K3O-XV-RHs" firstAttribute="top" secondItem="W01-3g-Z6O" secondAttribute="bottom" constant="8" symbolic="YES" id="gJw-28-f4u"/>
+                                    <constraint firstItem="K3O-XV-RHs" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="-5" id="gRR-Uh-ZNY"/>
+                                    <constraint firstItem="W01-3g-Z6O" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="5.5" id="ibH-km-79x"/>
                                     <constraint firstItem="ZqT-nv-lFG" firstAttribute="top" secondItem="O2v-tJ-ZXT" secondAttribute="bottom" constant="8" id="tPH-jE-8d0"/>
+                                    <constraint firstItem="K3O-XV-RHs" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" constant="-5" id="vST-J7-i1k"/>
                                     <constraint firstItem="O2v-tJ-ZXT" firstAttribute="centerY" secondItem="PUU-LR-C7c" secondAttribute="centerY" constant="44" id="xUN-0Z-gLw"/>
                                 </constraints>
                             </view>
@@ -199,11 +205,12 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="K3O-XV-RHs" id="ax9-fN-mqA"/>
                         <outlet property="emailTextField" destination="O2v-tJ-ZXT" id="iFa-hb-EDb"/>
                         <outlet property="logInButton" destination="IgX-aj-Pvs" id="45E-OL-jS3"/>
                         <outlet property="passwordTextField" destination="ZqT-nv-lFG" id="tZh-YD-hQ8"/>
                         <outlet property="signUpButton" destination="W01-3g-Z6O" id="Xsf-Kc-aMe"/>
-                        <segue destination="1yO-OD-174" kind="show" identifier="TabBarSegue" id="uLD-HX-RFk"/>
+                        <segue destination="1yO-OD-174" kind="show" identifier="login" id="uLD-HX-RFk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JEY-LE-516" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -239,7 +246,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="748" verticalCompressionResistancePriority="739" placeholderIntrinsicWidth="600" placeholderIntrinsicHeight="25" text="Where are you studying today?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zIo-wY-9WE">
                                         <rect key="frame" x="20" y="59" width="560" height="25"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                         <size key="shadowOffset" width="0.0" height="0.0"/>
                                     </label>
